--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="portfolio.css">
     <meta property="og:title" content="Portfolio">    
     <meta property="og:description" content="portfolio pawel szewczyk">
-    <meta property="og:type" content="prtfolio">
-    <meta property="og:url" content="">
-    <meta property="og:">
-    <meta property="og:">
-    <meta property="og:">    
+    <meta property="og:type" content="portfolio">
+    <meta property="og:url" content="Wszkolny.github.io">
+    <meta property="og:image" content="https://wszkolny.github.io/Pawel.jpg">
+    <meta property="og:site_name" content="Portfolio">
+    <meta property="fb:admins" content="your-Facebook-page-user-ID">    
 </head>
 <body>
     
